# hui-app

./: .gitignore  AUTHORS  Anchor.toml  README.md  get-private-key.ts  hello.js  package-lock.json  package.json  setup-local.ts  test.ts
app/assetbacked-mobile/: .eslintrc.js  App.tsx  app.json  package-lock.json  package.json  tailwind.config.js
app/assetbacked-web/: constants.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
app/assetbacked-web/common/: constants.ts
app/assetbacked-web/component/: Connect2Phantom.tsx  ConnectToPhantom.tsx
app/assetbacked-web/contracts/: constants.ts
app/assetbacked-web/hooks/: useAccount.ts  useAssociatedAccount.ts  useBalance.ts  useCreateAccount.ts  useFormatUnit.ts  useGetATA.ts  useGetAccount.ts  useGetMint.ts  useInitPool.ts  useMintTo.ts  useProgram.ts  useWorkspace.ts
app/assetbacked-web/pages/: _app.tsx  faucet.tsx  index.tsx  loan.tsx
app/assetbacked-web/utils/: balance.ts
app/hui-web/: .env.dev  next.config.js  package-lock.json  package.json  tsconfig.json
app/hui-web/common/: constants.ts
app/hui-web/components/: Header.tsx  Layout.tsx  ModalSuccess.tsx
app/hui-web/helps/: coverMonth.ts  notification.tsx
app/hui-web/hooks/: useAccount.ts  useAutoConnectWallet.ts  (+8 more)
programs/assetbacked/: Cargo.toml
programs/hello-anchor/: Cargo.toml
programs/hello-anchor/src/: curve.rs  lib.rs
programs/hui/: Cargo.toml
programs/hui/src/: curve.rs  errors.rs  lib.rs
scripts/: all-accounts.ts  bootstrap.ts  get-private-key.ts
tests/: assetbacked.ts  hello-anchor.ts  hui.test.ts
(+32 files in other folders)
